--- a/styles.css
+++ b/styles.css
@@ -65,9 +65,6 @@ body {
     font-style: normal;
 }
 
-.description {
-    margin: 20px 0;
-}
 section {
     padding: 60px 0;
 }
@@ -137,7 +134,7 @@ footer {
 }
 
 .tls::after {
-    content: "Toulouse, France"; /* The new text to display on hover */
+    content: "Toulouse, FR"; /* The new text to display on hover */
     position: absolute;
     top: 0;
     left: 0;
@@ -159,6 +156,11 @@ footer {
 
 .tls:hover {
     color: transparent; /* Hide the original text by making it transparent */
+}
+.location-container .material-symbols-outlined:hover {
+    font-variation-settings: "FILL" 30, "wght" 400, "GRAD" 40, "opsz" 200;
+    cursor: pointer;
+    color: #4632ff;
 }
 #social-bar {
     position: fixed;
