--- a/exp_style.css
+++ b/exp_style.css
@@ -37,7 +37,7 @@ body {
     font-size: 4em;
     margin: 0;
     background-clip: text;
-    background-image: linear-gradient(135deg, #009cea, #4632ff);
+    background-image: linear-gradient(135deg, #009cea, #000091);
     color: transparent;
 }
 .title:hover {
@@ -72,7 +72,7 @@ ul li {
     right: 0; /* Positions the bar at the right edge of the window */
     width: 50px; /* Adjust the width of the bar */
     height: auto; /* Removes fixed height, allowing icons to stack vertically */
-    background-color: #1424b7; /* Set your desired background color */
+    background-color: #000091; /* Set your desired background color */
     color: #ffffff; /* Set the text color for icons */
     display: flex; /* Arranges icons horizontally */
     flex-direction: column; /* Stacks icons vertically */
