--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,15 @@ body {
         "Helvetica Neue", Arial, sans-serif;
     background-color: #ffffff;
     color: #000000; /* White text */
+
+}
+.dev {
+    font-weight: 900;
+    cursor: default;
+}
+.dev:hover {
+    color: #000091;
+    text-decoration: underline;
 }
 
 .logo {
@@ -196,6 +205,7 @@ ul li {
 
 .location-container .material-symbols-outlined {
     font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 50;
+    color: #000000;
 }
 
 .container1 {
@@ -234,16 +244,7 @@ ul li {
 .card h2 {
     font-weight: bold;
 }
-.card-logo-box {
-    color: #000091;
-    width: 100%;
-    height: 50%;
-    border-radius: 7px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
+
 .card .material-symbols-outlined {
     font-size: 50px;
     font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 50;
@@ -294,3 +295,110 @@ a {
     display: inline-block; /* Ensures icons and text are on the same line */
     line-height: 1; /* Ensures proper vertical alignment */
 }
+.education-card {
+    background-color: #000091;
+    margin: 20px auto;
+    padding: 15px;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(61, 0, 203, 0.635);
+    transition: transform 0.3s, box-shadow 0.3s;
+    width: 200px;
+    height: 200px;
+    color: #ffffff;
+    font-family: "Comfortaa", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+
+}
+
+.education-card:hover {
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(61, 0, 203, 0.635);
+    font-family: "Mansalva", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.education-details {
+    text-align: center;
+}
+
+.education-details h3 {
+    margin: 10px 0 5px;
+    font-size: 1.2em;
+}
+
+.education-details p {
+    margin: 0;
+    font-size: 1em;
+}
+.ed {
+    color: #000091;
+    text-align: center;
+}
+.container4 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 20px auto;
+    padding: 0 20px;
+    max-width: 100%;
+}
+.education {
+    margin: 20px 0;
+    flex: auto;
+    flex-wrap: wrap;
+}
+.center-container {
+    margin: auto;
+    display: flex;
+    justify-content: center; /* Centers content horizontally */
+    align-items: center; /* Centers content vertically */
+    color: #4632ff;
+    background-color: rgba(20, 36, 183, 0.16);
+    width: max-content;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.card-logo-box {
+    font-size: 9em; /* Adjust the size of the icon */
+    margin-right: 10px; /* Adds space between icon and text */
+    display: flex;
+    align-items: center; /* Vertically align the icon with the text */
+}
+
+.logo2 {
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #4632ff;
+    /*background-color: rgba(20, 36, 183, 0.16);*/
+    display: inline-block;
+    padding: 10px 10px;
+    /*border-radius: 5px;*/
+    z-index: 1000;
+    font-family: "Mansalva", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+
+    margin: 0; /* Remove margin */
+}
+.competences-container {
+    margin-left: 20px;
+    margin-right: 20px;
+
+
+}
+.competence-title {
+    font-family: "Mansalva", sans-serif;
+    font-weight: bolder;
+    font-style: normal;
+    background: #000091;
+    width: max-content;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+
