--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ ul li {
 }
 
 .contact {
-    background-color: #f62000;
+    background-color: black;
     margin: auto;
     padding: 5px;
     border-radius: 40px;
