--- a/styles.css
+++ b/styles.css
@@ -2,26 +2,23 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
         "Helvetica Neue", Arial, sans-serif;
-    background-color: #ffffff;
-    color: #000000; /* White text */
+    background-color: #090c10;
+    color: #000000;
+    cursor: default;
+    user-select: none;
 
 }
 .dev {
-    font-weight: 900;
+    font-weight: 200;
     cursor: default;
     font-family: "Pixelify Sans", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
 }
-.dev:hover {
-    color: #fff;
-    -webkit-text-stroke: 1px black;
-
-}
 
 
 .logo {
-    position: fixed;
+    position: absolute;
     top: 20px;
     left: 20px;
     font-size: 1.5em;
@@ -31,6 +28,7 @@ body {
     display: inline-block;
     padding: 10px 10px;
     border-radius: 5px;
+    border: 1px solid #232930;
     z-index: 1000;
     font-family: "Mansalva", sans-serif;
     font-weight: 400;
@@ -55,6 +53,7 @@ body {
     height: 200px; /* Adjust height as needed */
     object-fit: cover;
     cursor: auto;
+    border: #232930 solid 2px;
 }
 
 .location-container {
@@ -63,6 +62,7 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
+    color: white;
 }
 
 .title {
@@ -75,7 +75,7 @@ body {
 
 .subtitle {
     font-size: 1.5em;
-    color: #000000;
+    color: #ffffff;
     font-family: "Comfortaa", sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
@@ -126,7 +126,7 @@ ul li {
     border-radius: 40px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s, box-shadow 0.3s;
-    max-width: 240px; /* Limiting maximum width */
+    max-width: 240px;
     color: #ffffff;
     font-family: "Mansalva", sans-serif;
     font-weight: bold;
@@ -140,44 +140,45 @@ ul li {
     font-style: normal;
 }
 .tls {
+    color: white;
     font-family: "Mansalva", sans-serif;
     font-weight: bold;
     font-style: normal;
     text-align: center;
     cursor: help;
-    display: inline-block; /* Ensure it fits the content */
-    position: relative; /* Required for the ::after pseudo-element */
-    transition: all 0.3s ease-in-out; /* Smooth transition for color change */
+    display: inline-block;
+    position: relative;
+    transition: all 0.3s ease-in-out;
 }
 
 .tls::after {
-    content: "Toulouse, FR"; /* The new text to display on hover */
+    content: "Toulouse, FR";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    color: rgb(0, 0, 0); /* Change text color on hover */
+    color: white;
     font-weight: bold;
     display: flex;
     align-items: center;
     justify-content: center;
-    opacity: 0; /* Start hidden */
-    pointer-events: none; /* Allow hover on parent element */
-    transition: opacity 0.3s ease; /* Smooth transition for opacity change */
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease;
 }
 
 .tls:hover::after {
-    opacity: 1; /* Show the new text on hover */
+    opacity: 1;
 }
 
 .tls:hover {
-    color: transparent; /* Hide the original text by making it transparent */
+    color: transparent;
 }
 .location-container .material-symbols-outlined:hover {
     font-variation-settings: "FILL" 30, "wght" 400, "GRAD" 40, "opsz" 200;
     cursor: pointer;
-    color: #000091;
+    color: #ffffff;
 }
 #social-bar {
     position: fixed;
@@ -185,16 +186,18 @@ ul li {
     right: 0; /* Positions the bar at the right edge of the window */
     width: 50px; /* Adjust the width of the bar */
     height: auto; /* Removes fixed height, allowing icons to stack vertically */
-    background-color: #000091; /* Set your desired background color */
+    background-color: rgba(0, 0, 145, 0.45); /* Set your desired background color */
     color: #ffffff; /* Set the text color for icons */
     display: flex; /* Arranges icons horizontally */
     flex-direction: column; /* Stacks icons vertically */
     justify-content: center; /* Centers icons vertically within the bar */
     align-items: center; /* Aligns icons horizontally in the center */
     border-radius: 5px 0 0 5px; /* Creates rounded corners except top right */
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.779); /* Adds a subtle shadow */
     transition: transform 0.3s; /* Smooth transition for hover effects (optional) */
     padding-top: 10px;
+    border-style: solid;
+    border-width: 1px 0 1px 1px;
+    border-color: #232930;
 }
 
 #social-bar a {
@@ -210,50 +213,9 @@ ul li {
 
 .location-container .material-symbols-outlined {
     font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 50;
-    color: #000000;
+    color: #ffffff;
 }
 
-.container1 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 80px auto;
-    padding: 0 20px;
-    max-width: 100%;
-}
-.card {
-    background: #ffffff;
-    color: rgb(0, 0, 0);
-    width: 250px;
-    height: 200px;
-    margin: 20px;
-    padding: 10px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: "Mansalva", sans-serif;
-    cursor: pointer;
-    border-style: solid;
-    border-color: #c5c5c5;
-    border-width: 1.5px;
-    border-bottom-color: #000091;
-    border-bottom-width: 4px;
-    box-sizing: border-box;
-}
-
-.card:hover {
-    background-color: #f0f0ff;
-}
-
-.card h2 {
-    font-weight: bold;
-}
-
-.card .material-symbols-outlined {
-    font-size: 50px;
-    font-variation-settings: "FILL" 0, "wght" 300, "GRAD" 0, "opsz" 50;
-}
 
 a {
     text-decoration: none;
@@ -270,7 +232,7 @@ a {
 }
 
 .download-btn {
-    background-color: #000091;
+    background-color: #121418;
     color: white;
     margin: auto;
     width: max-content;
@@ -278,11 +240,12 @@ a {
     border-radius: 50px;
     border-width: 1.5px;
     border-style: solid;
+    border-color: #232930;
     transition: all 0.3s;
 }
 .download-btn:hover {
-    background-color: #fff;
-    color: #000091;
+    background-color: #0a0c0e;
+
 }
 
 .container3 a {
@@ -297,98 +260,40 @@ a {
 .container3 .material-symbols-outlined {
     font-variation-settings: "FILL" 0, "wght" 700, "GRAD" 0, "opsz" 50;
     margin-bottom: 12px;
-    display: inline-block; /* Ensures icons and text are on the same line */
-    line-height: 1; /* Ensures proper vertical alignment */
-}
-.education-card {
-    background-color: #000091;
-    margin: 20px auto;
-    padding: 15px;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(61, 0, 203, 0.635);
-    transition: transform 0.3s, box-shadow 0.3s;
-    width: 200px;
-    height: 200px;
-    color: #ffffff;
-    font-family: "Comfortaa", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-
+    display: inline-block;
+    line-height: 1;
 }
 
-.education-card:hover {
-    transform: translateY(-15px);
-    box-shadow: 0 12px 16px rgba(61, 0, 203, 0.635);
-    font-family: "Mansalva", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-.education-details {
-    text-align: center;
-}
-
-.education-details h3 {
-    margin: 10px 0 5px;
-    font-size: 1.2em;
-}
-
-.education-details p {
-    margin: 0;
-    font-size: 1em;
-}
-.ed {
-    color: #000091;
-    text-align: center;
-}
-.container4 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 20px auto;
-    padding: 0 20px;
-    max-width: 100%;
-}
-.education {
-    margin: 20px 0;
-    flex: auto;
-    flex-wrap: wrap;
-}
 .center-container {
     margin: auto;
     display: flex;
-    justify-content: center; /* Centers content horizontally */
-    align-items: center; /* Centers content vertically */
-    color: #4632ff;
-    background-color: rgba(20, 36, 183, 0.16);
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    background-color: #0a0c0e;
     width: max-content;
     border-radius: 5px;
     text-align: center;
+
+    margin-top: 50px;
     margin-bottom: 50px;
+    padding: 10px;
+    border: 1px solid #232930;
+
 }
 
-.card-logo-box {
-    font-size: 9em; /* Adjust the size of the icon */
-    margin-right: 10px; /* Adds space between icon and text */
-    display: flex;
-    align-items: center; /* Vertically align the icon with the text */
-}
+
 
 .logo2 {
     font-size: 1.5em;
-    font-weight: bold;
-    color: #4632ff;
-    /*background-color: rgba(20, 36, 183, 0.16);*/
     display: inline-block;
-    padding: 10px 10px;
-    /*border-radius: 5px;*/
+    padding-right: 10px;
     z-index: 1000;
-    font-family: "Mansalva", sans-serif;
-    font-weight: 400;
+    font-family: "Pixelify Sans", sans-serif;
+    font-optical-sizing: auto;
     font-style: normal;
 
-    margin: 0; /* Remove margin */
+    margin: 0;
 }
 .competences-container {
     margin: 0 10%;
@@ -396,10 +301,12 @@ a {
 
 }
 .competence-group {
-    background-color: #1e1f22;
+    background-color: #121418;
     padding: 10px 10px ;
     margin: 2px 10px;
-    box-shadow: 0 6px 8px rgb(30, 31, 34);
+    border-style: solid;
+    border-width: 1.5px;
+    border-color: #232930;
     border-radius: 10px;
 }
 .competence-title {
@@ -431,4 +338,93 @@ a {
     font-style: normal;
 
 
+}
+.container-skill1 {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 40px auto;
+    gap: 20px;
+    padding: 10px;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+
+.language-skill {
+    background-color: #121418;
+    color: #ffffff;
+    padding: 10px 20px;
+    border-radius: 50px;
+    border-style: solid;
+    border-width: 1.5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition-duration: 0.1s;
+
+}
+
+
+
+.language-skill t {
+    font-family: "Comfortaa", sans-serif;
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+.language-skill i {
+    font-size: 1.5em;
+}
+.resume-section {
+    display: flex;
+    justify-content: center;
+    background-color: #121418;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 1.5px;
+    border-color: #232930;
+    padding: 20px;
+
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+td {
+    padding: 10px 40px;
+    vertical-align: top;
+}
+.position {
+    font-size: 30px;
+    font-weight: bold;
+}
+.company {
+    font-size: 18px;
+    color: #ffffff;
+    text-align: right;
+}
+.date {
+    font-size: 14px;
+    color: #ffffff;
+    text-align: right;
+}
+.crossed-out .position {
+    text-decoration: line-through;
+    color: #ffffff;
+}
+.education-section {
+    display: flex;
+    justify-content: center;
+    font-family: "Comfortaa", sans-serif;
+    font-weight: bold;
+    margin-right: 10px;
+    padding: 0px;
+
+}
+.position-now {
+    font-weight: bolder;
+    color: chartreuse;
+}
+.date-now {
+    color: chartreuse;
 }
