--- a/Projects/projectsStyle.css
+++ b/Projects/projectsStyle.css
@@ -49,7 +49,8 @@ body {
     border-radius: 10px;
 }
 #Anime p {
-    font-weight: 500;
+    font-weight: 700;
+    color: #ffffff;
 }
 #Anime h6 {
     border-radius: 10px;
@@ -67,6 +68,7 @@ body {
     margin-right: 10px;
     padding: 2px 10px;
     font-size: small;
+    font-weight: normal;
     width: max-content;
     border-radius: 15px;
     border-style: solid;
