--- a/Projects/projectsStyle.css
+++ b/Projects/projectsStyle.css
@@ -23,6 +23,10 @@ body {
     background-image: linear-gradient(135deg, #001fea, #f900ff);
     color: transparent;
 }
+#projects {
+    display: flex;
+    flex-direction: row;
+}
 #Anime{
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
@@ -33,10 +37,11 @@ body {
     border-width: 1.5px;
     border-color: #232930;
     border-radius: 10px;
-    width: 300px;
+    width: 700px;
     height: auto;
     padding: 20px;
     margin: 50px 50px;
+    margin-right: 30px;
 
 
 }
@@ -85,6 +90,7 @@ body {
     border-radius: 15px;
     border-style: solid;
     border-width: thin;
+
     border-color: #4632ff;
     text-decoration: none;
 
@@ -93,6 +99,22 @@ body {
     text-decoration: none;
 }
 
+#life-game {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    background-color: #121418;
+    border-style: solid;
+    border-width: 1.5px;
+    border-color: #232930;
+    border-radius: 10px;
+    width: 400px;
+    height: auto;
+    padding: 20px;
+    margin: 50px 50px;
+    margin-left: 0;
+}
 
 
 #social-bar {
