--- a/styles.css
+++ b/styles.css
@@ -16,29 +16,6 @@ body {
     font-style: normal;
 }
 
-
-.logo {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    font-size: 1.5em;
-    font-weight: bold;
-    color: #4632ff;
-    background-color: rgba(20, 36, 183, 0.16);
-    display: inline-block;
-    padding: 10px 10px;
-    border-radius: 5px;
-    border: 1px solid #232930;
-    z-index: 1000;
-    font-family: "Mansalva", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    cursor: pointer;
-}
-.logo:hover {
-    font-weight: bolder;
-}
-
 .container {
     max-width: 1000px;
     margin: 50px auto 40px;
@@ -265,34 +242,47 @@ a {
 }
 
 .center-container {
-    margin: auto;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    color: #ffffff;
-    background-color: #0a0c0e;
+    background-color: rgb(8 0 23);
     width: max-content;
-    border-radius: 5px;
+    border-radius: 5px 5px 0 0;
     text-align: center;
-
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-left: 15%;
     padding: 10px;
-    border: 1px solid #232930;
+    border:solid rgb(78 68 98);
+    border-width: 1.5px 1.5px 0 1.5px;
+
+
+}
+.center-container2 {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    background-color: rgb(8 0 23);
+    width: max-content;
+    border-radius: 5px 5px 0 0;
+    text-align: center;
+    margin-left: 30%;
+    padding: 10px;
+    border:solid rgb(78 68 98);
+    border-width: 1.5px 1.5px 0 1.5px;
+    margin-top: 10%;
+
 
 }
 
 
 
 .logo2 {
-    font-size: 1.5em;
+    font-size: 1em;
     display: inline-block;
-    padding-right: 10px;
     z-index: 1000;
-    font-family: "Pixelify Sans", sans-serif;
-    font-optical-sizing: auto;
+    font-family: "Mansalva", sans-serif;
+    font-weight: bolder;
     font-style: normal;
-
+    color: #5a3ee0;
     margin: 0;
 }
 .competences-container {
@@ -301,12 +291,12 @@ a {
 
 }
 .competence-group {
-    background-color: #121418;
+    background-color: rgb(8 0 23);
+    border-color: rgb(78 68 98);
     padding: 10px 10px ;
-    margin: 2px 10px;
+    margin: 0px 10px;
     border-style: solid;
     border-width: 1.5px;
-    border-color: #232930;
     border-radius: 10px;
 }
 .competence-title {
@@ -378,11 +368,11 @@ a {
 .resume-section {
     display: flex;
     justify-content: center;
-    background-color: #121418;
+    background-color: rgb(8 0 23);
+    border-color: rgb(78 68 98);
     border-radius: 10px;
     border-style: solid;
     border-width: 1.5px;
-    border-color: #232930;
     padding: 20px;
 
 }
@@ -418,7 +408,7 @@ td {
     font-family: "Comfortaa", sans-serif;
     font-weight: bold;
     margin-right: 10px;
-    padding: 0px;
+    padding: 0;
 
 }
 .position-now {
